--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@ a:hover{
 
 .stats-container{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   gap: 40px;
 }
